@@ -12,6 +12,7 @@
 
 0.16 release
 
+	* improved peer exchange performance by sharing incoming connections which advertize listen port 
 	* deprecate set_ratio(), and per-peer rate limits
 	* add web seed support for torrents with pad files
 	* introduced a more scalable API for torrent status updates (post_torrent_updates()) and updated client_test to use it
@@ -114,6 +115,7 @@
 	  incoming connection
 	* added more detailed instrumentation of the disk I/O thread
 
+	* fix overflow bug in progress_ppm field
 	* don't filter local peers received from a non-local tracker
 	* fix python deadlock when using python extensions
 	* fixed small memory leak in DHT
